--- a/_/tests/kbd4.html
+++ b/_/tests/kbd4.html
@@ -43,13 +43,12 @@
 <button type="button" id="open_popup">레이어 팝업 열기</button>
 
 <header>
-  <h1>@mctenshi &dash; miya.pe.kr</h1>
+  <h1>겨미겨미</h1>
   <img alt="" src="http://www.gravatar.com/avatar/a4daae50909fa9f70f611afec03238a8">
-  <p>I'm a Korean web professional who has been working with the web since 1999.
-    (a.k.a. <span>겨미겨미</span>, lainTT, Goonoo Kim)</p>
+  <p>저는 1999년부터 웹 개발을 해온 한국 웹 전문가입니다.</p>
 </header>
 
-<h2>I'm on&hellip;</h2>
+<h2>다음 링크들에서 활동중입니다.</h2>
 <ul>
   <li><a href="http://facebook.com/mctenshi">Facebook</a></li>
   <li><a href="http://twitter.com/mctenshi">Twitter</a></li>
@@ -58,7 +57,7 @@
   <li><a href="http://wordpress.miya.pe.kr">Wordpress</a> &dash; won't update anymore.</li>
 </ul>
 
-<h2>Projects</h2>
+<h2>프로젝트</h2>
 <ul>
   <li><a href="http://openwax.miya.pe.kr">OpenWAX</a>, an open source accessibility evaluation tool.</li>
   <li><a href="https://github.com/mctenshi/Inline-Translator">Inline Translator</a>, an open source web based simple
