--- a/_/slideshow.html
+++ b/_/slideshow.html
@@ -114,6 +114,15 @@
     </section>
     <section class="reader">
       <h1>WAI-ARIA</h1>
+      <ul>
+        <li>키보드 접근성 해결만으로는 부족한 RIA의 접근성 문제 해결</li>
+        <li>역할(<code>role</code>), 상태(<code>state</code>), 속성(<code>property</code>)</li>
+        <li>키보드 접근성 해결에 대한 모범 사례 제시</li>
+      </ul>
+      <img alt="" src="i/9.png" class="aria" />
+    </section>
+    <section class="reader">
+      <h1>WAI-ARIA가 적용된 코드</h1>
       <pre><code>&lt;button type="button" id="open_popup"&gt;레이어 팝업 열기&lt;/button&gt;
 
 &hellip;
@@ -126,11 +135,11 @@
 &lt;/div&gt;</code></pre>
     </section>
     <section class="reader">
-      <h1>WAI-ARIA 적용된 예제 - JAWS 13</h1>
+      <h1>WAI-ARIA가 적용된 예제 - JAWS 13</h1>
       <p class="test">실행 테스트</p>
     </section>
     <section class="reader">
-      <h1>WAI-ARIA 적용된 예제 - 센스리더</h1>
+      <h1>WAI-ARIA가 적용된 예제 - 센스리더</h1>
       <p class="test">실행 테스트</p>
     </section>
 
