--- a/_/tests/kbd1.html
+++ b/_/tests/kbd1.html
@@ -66,9 +66,9 @@
 </ul>
 
 <div id="popup">
-  <h2>중요공지</h2>
-  <p><a href="#">국내 10대 그룹</a>의 웹 접근성 평가를 두고 <a href="#">인증기관</a> 간에 서로 엇갈린 결과를 도출해 논란이 일고 있다.</p>
-  <p>'국내 10대 대기업 그룹 홈페이지의 웹 접근성이 미흡해 여전히 장애인들이 이용하기 어렵다'는 주장과 '웹 접근성에 큰 문제 없다'는 주장이 부딪히고 있는 것이다.</p>
+  <h2>팝업 제목</h2>
+  <p><a href="#">구글</a>, <a href="#">아마존</a>, <a href="#">페이스북</a></p>
+  <p><label><input type="checkbox" /> 전체선택</label></p>
   <button type="button">확인</button>
 </div>
 
