--- a/_/tests/aria.html
+++ b/_/tests/aria.html
@@ -2,7 +2,7 @@
 <html lang="ko">
 <head>
   <meta charset="utf-8">
-  <title>레이어 닫을 때 초점 호출 버튼으로 돌려주기 - 레이어 팝업 키보드 접근성 테스트</title>
+  <title>WAI-ARIA 적용된 레이어 팝업 - 레이어 팝업 키보드 접근성 테스트</title>
   <style>
   body{margin:0;padding:10px 10px 10px 120px;font:1em/1.2 Georgia,'나눔고딕',NanumGothic,serif}
   *:focus{outline:solid 8px #f00;}
@@ -27,13 +27,12 @@
 <button type="button" id="open_popup">레이어 팝업 열기</button>
 
 <header>
-  <h1>@mctenshi &dash; miya.pe.kr</h1>
+  <h1>겨미겨미</h1>
   <img alt="" src="http://www.gravatar.com/avatar/a4daae50909fa9f70f611afec03238a8">
-  <p>I'm a Korean web professional who has been working with the web since 1999.
-    (a.k.a. <span>겨미겨미</span>, lainTT, Goonoo Kim)</p>
+  <p>저는 1999년부터 웹 개발을 해온 한국 웹 전문가입니다.</p>
 </header>
 
-<h2>I'm on&hellip;</h2>
+<h2>다음 링크들에서 활동중입니다.</h2>
 <ul>
   <li><a href="http://facebook.com/mctenshi">Facebook</a></li>
   <li><a href="http://twitter.com/mctenshi">Twitter</a></li>
@@ -42,7 +41,7 @@
   <li><a href="http://wordpress.miya.pe.kr">Wordpress</a> &dash; won't update anymore.</li>
 </ul>
 
-<h2>Projects</h2>
+<h2>프로젝트</h2>
 <ul>
   <li><a href="http://openwax.miya.pe.kr">OpenWAX</a>, an open source accessibility evaluation tool.</li>
   <li><a href="https://github.com/mctenshi/Inline-Translator">Inline Translator</a>, an open source web based simple
@@ -51,9 +50,9 @@
 </ul>
 
 <div id="popup" role="dialog" aria-labelledby="popup_title">
-  <h2 id="popup_title">중요공지</h2>
-  <p><a href="#">국내 10대 그룹</a>의 웹 접근성 평가를 두고 <a href="#">인증기관</a> 간에 서로 엇갈린 결과를 도출해 논란이 일고 있다.</p>
-  <p>'국내 10대 <a href="#">대기업 그룹 홈페이지</a>의 웹 접근성이 미흡해 여전히 장애인들이 이용하기 어렵다'는 주장과 '웹 접근성에 큰 문제 없다'는 주장이 부딪히고 있는 것이다.</p>
+  <h2 id="popup_title">팝업 제목</h2>
+  <p><a href="#">구글</a>, <a href="#">아마존</a>, <a href="#">페이스북</a></p>
+  <p><label><input type="checkbox" /> 전체선택</label></p>
   <button type="button">확인</button>
 </div>
 
