마지막 다듬기

--- a/_/slideshow.html
+++ b/_/slideshow.html
@@ -48,7 +48,7 @@
   		<img src="i/4.jpeg" alt="" />
       <ul>
         <li><a href="http://miya.pe.kr">김군우</a> (a.k.a 겨미겨미)</li>
-        <li>SK planet 소속. <a href="https://developers.skplanetx.com/apidoc/kor/comment/">댓글 플러그인</a> 개발 중.</li>
+        <li><a href="http://skplanet.com">SK planet</a> 소속. <a href="https://developers.skplanetx.com/apidoc/kor/comment/">댓글 플러그인</a> 개발 중.</li>
         <li>오픈소스 <a href="http://openwax.miya.pe.kr">OpenWAX</a> 개발</li>
         <li><a href="http://kwag.net/">KWAG</a>,
           <a href="http://www.wah.or.kr/Consulting/consultList.asp">웹 접근성 연구소 자문게시판</a>,
