--- a/_/tests/kbd4.html
+++ b/_/tests/kbd4.html
@@ -3,40 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>레이어 닫을 때 초점 호출 버튼으로 돌려주기 - 레이어 팝업 키보드 접근성 테스트</title>
-  <style>
-  body{margin:0;padding:10px 10px 10px 120px;font:1em/1.2 Georgia,'나눔고딕',NanumGothic,serif}
-  *:focus{outline:solid 8px #f00;}
-  h1{font-size:2.5em}
-  h2{font-size:2em}
-  img{position:absolute;top:40px;left:20px;border-radius:50px}
-  #popup {
-    display: none;
-    position: absolute;
-    top: 100px;
-    left: 150px;
-    width: 400px;
-    height: 400px;
-    padding: 10px;
-    border: solid 1px #000;
-    background: #ddd;
-  }
-  #key {
-    position: absolute;
-    top: -80px;
-    right: 0;
-    padding: 20px;
-    background: #666;
-    color: #fff;
-    font-size: 30px;
-  }
-  #key.show {
-    top: 0;
-  }
-  #key.remove {
-    transition: all 500ms cubic-bezier(0.755, 0.050, 0.855, 0.060);
-    top: -80px;
-  }
-  </style>
+  <link rel="stylesheet" href="c.css" />
 </head>
 <body>
 
@@ -75,6 +42,7 @@
 <div id="key"></div>
 
 <script src="jquery.js"></script>
+<script src="keyPressed.js"></script>
 <script>
 $('#open_popup').on('click', function (e) {
   $('#popup').toggle();
@@ -100,35 +68,6 @@ $(document).on('keyup', function (e) {
   } else if (!shiftPressed && e.keyCode === KEY_TAB && e.target === $('#popup button').get(0)) {
     $('#popup a:first').focus();
     e.preventDefault();
-  }
-});
-
-var KEY_TAB = 9, KEY_ENTER = 13, KEY_SHIFT = 16, shiftPressed = false,
-    keyPressed = function (key) {
-      $('#key').addClass('show').text(key);
-      setTimeout(function () {
-        $('#key').addClass('remove');
-      }, 500);
-      setTimeout(function () {
-        $('#key').removeClass('show remove');
-      }, 1000);
-    };
-$(window).on('keydown', function (e) {
-  var key = e.keyCode;
-  if (key === KEY_SHIFT) {
-    shiftPressed = true;
-  }
-}).on('keyup', function (e) {
-  var key = e.keyCode;
-  if (key === KEY_SHIFT) {
-    shiftPressed = false;
-  }
-  if (key === KEY_TAB && shiftPressed) {
-    keyPressed('Shift+Tab');
-  } else if (key === KEY_TAB) {
-    keyPressed('Tab');
-  } else if (key === KEY_ENTER) {
-    keyPressed('Enter');
   }
 });
 </script>
