jQuery UI Dialog 예제 추가

--- a/_/slideshow.html
+++ b/_/slideshow.html
@@ -157,6 +157,8 @@
         <li>메뉴</li>
         <li>&hellip;</li>
       </ul>
+      <p class="iframeex">jQuery UI Dialog 예제</p>
+      <iframe title="jQuery UI Dialog 예제" src="http://jqueryui.com/resources/demos/dialog/modal-form.html"></iframe>
     </section>
 
     <section class="end">
@@ -164,7 +166,7 @@
       <ul>
         <li>자바스크립트로 만든 UI는 키보드, 스크린리더 테스트를!</li>
         <li>어떻게 구현해야 할지 모르겠다면 WAI-ARIA 규격을 참고한다.</li>
-        <li>그마저도 어렵다면 접근성 있게 만들어놓은 라이브러리를 활용한다.</li>
+        <li>직접 구현이 어렵거나 번거롭다면 접근성 있게 만들어놓은 라이브러리를 활용한다.</li>
       </ul>
     </section>
   </div>
